--- a/index.html
+++ b/index.html
@@ -1,54 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1" />
-        <meta name="description" content="Pokémon team analysis">
-        <meta name="author" content="Michael Ortiz">
-        <title>Birch Labs</title>
-        <link rel="icon" href="./assets/img/professor.png">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-        <link rel="stylesheet" href="./assets/css/normalize.css">
-        <link rel="stylesheet" href="./assets/css/style.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-        <script src="https://unpkg.com/pokeapi-js-wrapper/dist/index.js"></script>
-        <script src="./assets/js/birch-lab.js"></script>
-    </head>
-    
-    <body>
-        <navbar class="navbar navbar-light">
-            <div class="container">
-                <a class="navbar-brand" href="#">Birch Labs</a>
-                <a class="nav-link text-dark" href="https://github.com/micort35" target="_blank"><p>My Github</p></a>
-            </div>
-        </navbar>
-        <img src="./assets/img/Poké_Ball.svg.png" class="d-block mx-auto w-25 my-4" alt="Pokéball" />
-        <form>
-            <div class="form-group mx-auto w-25">
-                <input type="text" id="entry" class="form-control mb-2" placeholder="pokémon">
-                <div class="text-center">
-                    <button type="button" id="clear" class="btn btn-danger mb-5">Clear</button>
-                </div>
-            </div>
-        </form>
-        <div id="team" class="d-flex flex-row flex-wrap justify-content-around mb-10">
-        </div>
-        <div class="text-center">
-            <button type="button" id="generator" class="btn btn-success d-none mb-5">Generate Team Data</button>
-        </div>
-        <div id="aggregates" class="d-flex flex-row justify-content-around">
-            <div id="stat-wrapper">
-
-            </div>
-            <div id="resists-wrapper">
-
-            </div>
-            <div id="strengths-wrapper">
-
-            </div>
-        </div>
-    </body>
-</html>
+<!doctype html><html lang="en-US"><head><meta charset="UTF-8"/><meta name="viewport" content="height=device-height,width=device-width,initial-scale=1"/><meta name="description" content="Pokémon team analysis"><meta name="author" content="Michael Ortiz"><title>Birch Labs</title><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link href="/birch-labs/static/css/main.95806a4a.chunk.css" rel="stylesheet"></head><body class="page-bg"><div id="root"></div><script>!function(a){function e(e){for(var r,t,n=e[0],o=e[1],u=e[2],l=0,i=[];l<n.length;l++)t=n[l],Object.prototype.hasOwnProperty.call(f,t)&&f[t]&&i.push(f[t][0]),f[t]=0;for(r in o)Object.prototype.hasOwnProperty.call(o,r)&&(a[r]=o[r]);for(s&&s(e);i.length;)i.shift()();return p.push.apply(p,u||[]),c()}function c(){for(var e,r=0;r<p.length;r++){for(var t=p[r],n=!0,o=1;o<t.length;o++){var u=t[o];0!==f[u]&&(n=!1)}n&&(p.splice(r--,1),e=l(l.s=t[0]))}return e}var t={},f={1:0},p=[];function l(e){if(t[e])return t[e].exports;var r=t[e]={i:e,l:!1,exports:{}};return a[e].call(r.exports,r,r.exports,l),r.l=!0,r.exports}l.m=a,l.c=t,l.d=function(e,r,t){l.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(r,e){if(1&e&&(r=l(r)),8&e)return r;if(4&e&&"object"==typeof r&&r&&r.__esModule)return r;var t=Object.create(null);if(l.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:r}),2&e&&"string"!=typeof r)for(var n in r)l.d(t,n,function(e){return r[e]}.bind(null,n));return t},l.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(r,"a",r),r},l.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},l.p="/birch-labs/";var r=window["webpackJsonpbirch-labs"]=window["webpackJsonpbirch-labs"]||[],n=r.push.bind(r);r.push=e,r=r.slice();for(var o=0;o<r.length;o++)e(r[o]);var s=n;c()}([])</script><script src="/birch-labs/static/js/2.07bf634a.chunk.js"></script><script src="/birch-labs/static/js/main.7cf776dc.chunk.js"></script></body></html>
